--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -54,14 +54,13 @@
             android:text="@string/favoriteGenre"
             android:id="@+id/genreProfile" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/text_height"
-            android:inputType="textCapSentences"
-            android:singleLine="true"
-            android:text=""
-            android:hint="@string/genreHint"
-            android:id="@+id/genreProfileEdit"/>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/genreSpinner"
+            android:layout_below="@+id/linearLayout2"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
@@ -142,12 +141,5 @@
             android:hint="Enter Major here"
             android:id="@+id/major" />
     </LinearLayout>
-
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/genreSpinner"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
