--- a/app/src/main/res/layout/activity_movie_view.xml
+++ b/app/src/main/res/layout/activity_movie_view.xml
@@ -60,6 +60,10 @@
         android:layout_below="@+id/Title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="107dp" />
+    <com.facebook.share.widget.ShareButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/shareButton"   />
 
 </RelativeLayout>
 </ScrollView>
