--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -78,12 +78,13 @@
             android:text="@string/location"
             android:id="@+id/locationProfile" />
 
-        <EditText
+        <Button
             android:layout_width="match_parent"
             android:layout_height="@dimen/text_height"
             android:inputType="textCapSentences"
             android:singleLine="true"
             android:text=""
+            android:onClick="onLocationClick"
             android:hint="@string/locationHint"
             android:id="@+id/locationProfileEdit" />
 
